<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context="com.example.stetoskopdigital.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutGoal"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/white_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/jantung_record">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rekam_suara_jantung"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cekStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/white_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/jantung_activity">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cek_status_jantung"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/trending_background"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutGoal"
                app:layout_constraintVertical_bias="1.0">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="226dp"
                    android:background="@drawable/white_rectangle"
                    android:paddingBottom="2dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:text="@string/informasi"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    android:layout_marginTop="40dp"
                    android:ellipsize="end"
                    android:text="@string/pastikan_anda_memiliki_device_stetoskop_digital"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="@id/info"
                    tools:layout_editor_absoluteX="20dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_main"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/txt_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_login"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rectangle"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_logout">

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pencarian"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textSize="10sp"></EditText>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/halo"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/navigation"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/design_default_color_secondary"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"/>

</androidx.constraintlayout.widget.ConstraintLayout>